--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,93 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+button,
+img {
+  user-select: none;
+}
+
+p {
+  line-height: 1.8;
+}
+
+.header {
+  position: absolute;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.233);
+}
+
+.home {
+  background: url("./starter-code/assets/home/background-home-mobile.jpg")
+    no-repeat center/cover;
+  height: calc(100vh - 1px);
+}
+
+.home .overlay {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: calc(100vh - 1px);
+}
+
+.destinations {
+  background: url("./starter-code/assets/destination/background-destination-desktop.jpg")
+    no-repeat center/cover;
+}
+
+@media (min-width: 768px) {
+  .home {
+    background: url("./starter-code/assets/home/background-home-tablet.jpg")
+      no-repeat center/cover;
+    height: calc(100vh - 1px);
+  }
+
+  .home .overlay {
+    flex-direction: row;
+  }
+
+  .destinations {
+    background: url("./starter-code/assets/destination/background-destination-tablet.jpg")
+      no-repeat center/cover;
+  }
+}
+
+@media (min-width: 1280px) {
+  p {
+    font-size: 18px;
+  }
+
+  .header {
+    /* filter: blur(1px); */
+  }
+
+  .home {
+    background: url("./starter-code/assets/home/background-home-desktop.jpg")
+      no-repeat center/cover;
+    height: 100vh;
+  }
+
+  .home .overlay {
+    max-width: 1200px;
+    margin: auto;
+  }
+
+  .destinations {
+    background: url("./starter-code/assets/destination/background-destination-desktop.jpg")
+      no-repeat center/cover;
+  }
 }
